# auto-nation

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  requirements.txt  setup.cfg
diagrams/: network architecture diagram.drawio  system-architecture.drawio
examples/: connect_to_router.py
public/: index.html
server/: db.js  endpoints.js  package-lock.json  package.json  server.js
src/: App.js  Sidebar.js  endpoints.js  index.js
src/AutoNation/: .env  app.py  error_messages.py  home_page.glade  home_page.py  main.py  router_widget.glade  router_widget.py  ssh_client.py  tasks.json  tasks_reader.py  utils.py
src/BackupPage/: BackupPage.js
src/Dialogs/: AddDialog.js  ConfirmationDialog.js
src/HomePage/: DevicesTable.js  HomePage.js  TaskExecutor.js  TaskSelection.js
src/RoutersPage/: RouterRow.js  RoutersPage.js
src/RoutingPages.js/: NotFoundPage.js
src/TasksPage/: AddNewTaskModal.js  Command.js  Step.js  Task.js  TaskModal.js  TasksPage.js
src/TopologyPage/: Topology.js  TopologyPage.js
