[metadata]
name = AutoNation
version = 0.0.1

[options]
packages = find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
gui_scripts =
    AutoNationGUI = AutoNation.main:main

[options.package_data]
AutoNation =
    home_page.glade
    router_widget.glade
    tasks.json
